--- a/httpdemo/web/css/styles.css
+++ b/httpdemo/web/css/styles.css
@@ -7,11 +7,58 @@ and open the template in the editor.
     Created on : 02-11-2016, 19:01:49
     Author     : pefl
 */
-div{
+body
+{
+   
+   border-color: blue;
+    border-width: 5px;
+    width: 80%;
+    height:100%;
+    left: 10%;
+    border-style: solid;
+    padding: 10px;
+    float: left;
+}
+
+#billede_ramme
+{
+  height: 60%;
+    width : 80%; 
+    border: 1px;
     border-color: blue;
-    border-width: 2px;
-    width: 200px;
-    height: 400px;
     border-style: solid;
 }
 
+#billede
+{ 
+     height: 100%;
+     width: 100%;
+}
+
+.links
+{
+    font-weight: bold;
+    text-decoration:none;
+    color: black;
+}
+#menu
+{
+    height: 10%;
+    width: 80%;
+    background-color: lightblue;
+}
+
+#kontakt
+{
+    color: blue;
+    text-decoration: none;
+}
+
+#billede_ramme_pfm
+{
+    height: 20%;
+    width : 20%; 
+    border: 2px;
+    border-color: green;
+    border-style: solid;
+}
